--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>saylani Real EState</title>
-<meta name="description" content="">
+<meta name="dgit remote add origin https://github.com/nashitulislam/nashit103.gitescription" content="">
 <meta name="author" content="">
 
 <!-- Favicons
